--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 fastapi==0.70.0
+google-api-python-client==2.17.1
+requests==2.26.0
+google-cloud-translate==2.12.0
 uvicorn==0.15.0
-google-api-python-client==2.31.0
-google-auth-oauthlib==0.4.6
